--- a/cava/Content/custom.css
+++ b/cava/Content/custom.css
@@ -1,8 +1,19 @@
-﻿body {
-    padding-top: 0px !important;
-    height: 100%;
+﻿html, body {
+    height: 92%;
+    margin: 0;
+    font-family: "PFDinDisplayPro-Medium", "Helvetica Neue", Helvetica, Arial, sans-serif !important;
 }
 
+.content {
+    padding: 20px;
+    min-height: 100%;
+    margin: 0 auto -50px;
+}
+
+.footer,
+.push {
+    height: 50px;
+}
 
 .bg {
     /*background: url(images/background.jpg) no-repeat center center fixed;*/
@@ -13,8 +24,8 @@
 }
 
 .navbar {
-    opacity: 0.9;
     width: 100%;
+    border-style: none !important;
 }
 
 .cava-title {
@@ -29,7 +40,7 @@
 }
 
 .custom-container {
-    background-color: #2c3e50;
+    background-color: #273D61;
     opacity: 1;
     border-radius: 10px;
     padding: 5px;
@@ -37,11 +48,16 @@
 }
 
 .btn {
-    width: 120px
+    width: 120px;
+    font-family: "PFDinDisplayPro-Medium", "Helvetica Neue", Helvetica, Arial, sans-serif !important;
+}
+
+input {
+    font-family: "PFDinDisplayPro-Medium", "Helvetica Neue", Helvetica, Arial, sans-serif !important;
 }
 
 .custom-label {
-    font-family: Arial !important;
+    font-family: "PFDinDisplayPro-Medium", "Helvetica Neue", Helvetica, Arial, sans-serif !important;
     font-weight: normal;
     font-size: 20px;
     text-align: justify
@@ -79,7 +95,7 @@
 .div-table {
     background-color: white !important;
     color: black !important;
-    font-family: Neucha,-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
+    font-family: "PFDinDisplayPro-Medium", "Helvetica Neue", Helvetica, Arial, sans-serif !important;
     padding: 5px !important;
 }
 
@@ -101,14 +117,14 @@
 }
 
 .spinner-grow {
-    background-color: #2c3e50 !important;
+    background-color: #273D61 !important;
 }
 
 .notifyjs-foo-base {
     opacity: 1;
     width: 345px;
     height: 145px;
-    background: #2c3e50;
+    background: #273D61;
     padding: 5px;
     border-radius: 10px;
 }
@@ -145,26 +161,11 @@
     margin-right: auto;
     position: absolute;
     text-align: center;
-    font-family: "futura-pt";
+    font-family: "PFDinDisplayPro-Medium", "Helvetica Neue", Helvetica, Arial, sans-serif !important;
     font-size: 20px;
     color: black;
     font-weight: 900;
     letter-spacing: .15em;
-}
-
-.container-title {
-    top: 40%;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    margin-left: auto;
-    margin-right: auto;
-    position: absolute;
-    text-align: center;
-    font-family: "futura-pt";
-    font-size: 15px;
-    color: #2c3e50;
-    letter-spacing: .20em;
 }
 
 .slide-sub-title {
@@ -176,11 +177,35 @@
     margin-right: auto;
     position: absolute;
     text-align: center;
-    font-family: "futura-pt";
+    font-family: "PFDinDisplayPro-Medium", "Helvetica Neue", Helvetica, Arial, sans-serif !important;
     font-size: 15px;
     color: black;
     letter-spacing: .10em;
     text-decoration: none;
+}
+
+
+.container-title {
+    top: 40%;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
+    position: absolute;
+    text-align: center;
+    font-family: "PFDinDisplayPro-Medium", "Helvetica Neue", Helvetica, Arial, sans-serif !important;
+    font-size: 15px;
+    color: white;
+    letter-spacing: .20em;
+}
+
+.bg-orange {
+    background-color: #DF6A27;
+}
+
+.bg-blue {
+    background-color: #0D2749;
 }
 
 .processing-icon {
@@ -218,13 +243,23 @@
 .transparent8 {
     opacity: 0.8;
     transition: opacity 0.8s;
-    /*background: #2c3e50;*/
+    /*background: #273D61;*/
+}
+
+a.menu:hover {
+    color: #DF6A27 !important;
 }
 
 img.transparent5:hover {
     opacity: 1.0;
     transition: opacity 0.8s;
-    cursor: pointer;
+}
+
+img.logo{
+    height:150px;
+    width:190px;
+    margin-left:20px;
+    margin-right:20px;
 }
 
 div.transparent8:hover {
@@ -238,28 +273,136 @@ img {
     max-height: 100%;
 }
 
-.h-200 {
-    height: 200px;
+.h-700 {
+    height: 700px;
 }
 
 .h-400 {
     height: 400px;
 }
 
-.h-700 {
-    height: 700px;
+.h-200 {
+    height: 200px;
 }
 
-.fade-edge {
-    -moz-box-shadow: 1px 2px 3px rgba(0,0,0,.5);
-    -webkit-box-shadow: 1px 2px 3px rgba(0,0,0,.5);
-    box-shadow: 1px 2px 3px rgba(0,0,0,.5);
+.h-150 {
+    height: 150px;
+}
+
+.h-100 {
+    height: 100px;
+}
+
+.h-dynamic {
+    height: 100px;
 }
 
 .footer-bg {
-    background-color: #2c3e50;
+    background-color: #273D61;
 }
 
+@media screen and (min-device-width: 320px) and (max-device-width: 376px) {
+    .h-700 {
+        height: 215px
+    }
+
+    .slide-title {
+        top: 0%;
+        font-size: 15px;
+    }
+
+    .slide-sub-title {
+        top: 15%;
+        font-size: 15px;
+    }
+}
+
+@media screen and (min-device-width: 376px) and (max-device-width: 426px) {
+    .h-700 {
+        height: 285px
+    }
+
+    .slide-title {
+        top: 0%;
+        font-size: 15px;
+    }
+
+    .slide-sub-title {
+        top: 10%;
+        font-size: 15px;
+    }
+}
+
+@media screen and (min-device-width: 426px) and (max-device-width: 768px) {
+    .h-700 {
+        height: 505px
+    }
+
+    .slide-title {
+        top: 0%;
+    }
+
+    .slide-sub-title {
+        top: 10%;
+    }
+
+    .h-dynamic {
+        height: 178px;
+    }
+}
+
+@media screen and (min-device-width: 768px) and (max-device-width: 1024px) {
+    .h-700 {
+        height: 500px
+    }
+
+    .slide-title {
+        top: 0%;
+    }
+
+    .slide-sub-title {
+        top: 10%;
+    }
+
+    .h-dynamic {
+        height: 235px;
+    }
+}
+
+@media screen and (min-device-width: 1024px) and (max-device-width: 1440px) {
+    .h-700 {
+        height: 500px
+    }
+
+    .slide-title {
+        top: 0%;
+    }
+
+    .slide-sub-title {
+        top: 10%;
+    }
+
+    .h-dynamic {
+        height: 329px;
+    }
+}
+@media screen and (min-device-width: 1440px) and (max-device-width: 2560px) {
+    .h-700 {
+        height: 830px
+    }
+
+    .slide-title {
+        top: 0%;
+    }
+
+    .slide-sub-title {
+        top: 10%;
+    }
+
+    .h-dynamic {
+        height: 430px;
+    }
+}
 
 /*@media only screen and (min-width: 2559px) and (max-width:2561px) {
     .device-height {
