--- a/cava/Views/Home/Experience.cshtml
+++ b/cava/Views/Home/Experience.cshtml
@@ -1,82 +1,67 @@
-﻿<div>
-    <div id="experience-carousel" class="carousel slide carousel-fade h-700 transparent8" data-ride="carousel">
-        <div class="carousel-inner h-700">
-            <div class="carousel-item active">
-                <a href="https://order.cava.com/delivery" class="slide-title invisible"><p class="p-5">EXCELENTE UBICACIÓN</p></a>
-                <a href="https://order.cava.com/delivery" class="slide-sub-title invisible">
-                    <p class="p-5">
-                        UBICADOS ESTRATÉGICAMENTE EN LA ENTRADA DE <b><u>AVENIDA ESCAZÚ</u></b>,SOMOS SIN DUDA EL LUGAR MÁS EXCLUSIVO Y DINÁMICO DE LA ZONA
-                    </p>
-                </a>
-                <img class="d-block w-100" src="~/Content/images/Kitchen/cava_febrero2021_15.jpg" alt="First slide">
-            </div>
-            <div class="carousel-item">
-                <a href="https://order.cava.com/delivery" class="slide-title invisible"><p class="p-5">VARIEDADES</p></a>
-                <a href="https://order.cava.com/delivery" class="slide-sub-title invisible">
-                    <p class="p-5">
-                        ESPACIOS EXCLUSIVOS PARA REUNIONES Y CELEBRACIONES
-                        <br />
-                        RESERVACIONES CON LÍNEA DIRECTA DE SERVICIO AL CLIENTE
-                        <br />
-                        ÁREAS DE CO-WORKING
-                        <br />
-                        DJ´S - MÚSICA EN VIVO
-                    </p>
-                </a>
-                <img class="d-block w-100" src="~/Content/images/Kitchen/cava_febrero2021_48.jpg" alt="Second slide">
-            </div>
-            <div class="carousel-item">
-                <a href="https://order.cava.com/delivery" class="slide-title invisible"><p class="p-5">SERVICIOS</p></a>
-                <a href="https://order.cava.com/delivery" class="slide-sub-title invisible">
-                    <p class="p-5">
-                        AFTER OFFICE, ALMUERZOS Y CENAS<br />
-                        NOCHES TEMÁTICAS<br />
-                        PRODUCCIÓN DE MATERIAL POP, VIDEOS, ETC.<br />
-                        ANFITRIONES Y ASISTENTE DE PRODUCCIÓN<br />
-                        CATA DE VINOS Y WHISKEY<br />
-                        CHEFS ESTRELLAS INVITADOS<br />
-                        VIAJE GASTRONÓMICO POR EL MUNDO (PAELLA, TACOS, ORIENTAL, MOLECULAR)<br />
-                        TARDES DE BARISMO Y POSTRES<br />
-                        MIXOLOGÍA INTERNACIONAL<br />
-                    </p>
-                </a>
-                <img class="d-block w-100" src="~/Content/images/Kitchen/cava_febrero2021_88.jpg" alt="Third slide" />
-            </div>
+﻿<div id="experience-carousel" class="carousel slide carousel-fade h-700 transparent8" data-ride="carousel">
+    <div class="carousel-inner h-700">
+        <div class="carousel-item active">
+            <a href="https://order.cava.com/delivery" class="slide-title invisible"><p class="p-5">EXCELENTE UBICACIÓN</p></a>
+            <a href="https://order.cava.com/delivery" class="slide-sub-title invisible">
+                <p class="p-5">
+                    UBICADOS ESTRATÉGICAMENTE EN LA ENTRADA DE <b><u>AVENIDA ESCAZÚ</u></b>,SOMOS SIN DUDA EL LUGAR MÁS EXCLUSIVO Y DINÁMICO DE LA ZONA
+                </p>
+            </a>
+            <img class="d-block w-100" src="~/Content/images/Kitchen/cava_febrero2021_15.jpg" alt="First slide">
         </div>
-        <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-        </a>
-    </div>
-    <div class="row h-400">
-        <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12 p-0 transparent8">
-            <p class="container-title">BIENVENIDOS A CAVA!</p>
+        <div class="carousel-item">
+            <a href="https://order.cava.com/delivery" class="slide-title invisible"><p class="p-5">VARIEDADES</p></a>
+            <a href="https://order.cava.com/delivery" class="slide-sub-title invisible">
+                <p class="p-5">
+                    ESPACIOS EXCLUSIVOS PARA REUNIONES Y CELEBRACIONES
+                    <br />
+                    RESERVACIONES CON LÍNEA DIRECTA DE SERVICIO AL CLIENTE
+                    <br />
+                    ÁREAS DE CO-WORKING
+                    <br />
+                    DJ´S - MÚSICA EN VIVO
+                </p>
+            </a>
+            <img class="d-block w-100" src="~/Content/images/Kitchen/cava_febrero2021_48.jpg" alt="Second slide">
         </div>
-        <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12 p-0">
-            <img class="d-block w-100 transparent5" src="~/Content/images/Experience/cava_febrero2021_45.jpg">
-        </div>
-        <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12 p-0 transparent8">
-            <p class="container-title">DISFRUTA DE NUESTRA EXPERIENCIA</p>
+        <div class="carousel-item">
+            <a href="https://order.cava.com/delivery" class="slide-title invisible"><p class="p-5">SERVICIOS</p></a>
+            <a href="https://order.cava.com/delivery" class="slide-sub-title invisible">
+                <p class="p-5">
+                    AFTER OFFICE, ALMUERZOS Y CENAS<br />
+                    NOCHES TEMÁTICAS<br />
+                    PRODUCCIÓN DE MATERIAL POP, VIDEOS, ETC.<br />
+                    ANFITRIONES Y ASISTENTE DE PRODUCCIÓN<br />
+                    CATA DE VINOS Y WHISKEY<br />
+                    CHEFS ESTRELLAS INVITADOS<br />
+                    VIAJE GASTRONÓMICO POR EL MUNDO (PAELLA, TACOS, ORIENTAL, MOLECULAR)<br />
+                    TARDES DE BARISMO Y POSTRES<br />
+                    MIXOLOGÍA INTERNACIONAL<br />
+                </p>
+            </a>
+            <img class="d-block w-100" src="~/Content/images/Kitchen/cava_febrero2021_88.jpg" alt="Third slide" />
         </div>
     </div>
-    <div class="row h-400">
-        <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12 p-0">
-            <img class="d-block w-100 transparent5" src="~/Content/images/Experience/cava_febrero2021_48.jpg">
-        </div>
-        <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12 p-0 transparent8">
-            <p class="container-title">AVENIDA ESCAZU</p>
-        </div>
-        <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12 p-0">
-            <img class="d-block w-100 transparent5" src="~/Content/images/Experience/cava_febrero2021_37.jpg">
-        </div>
+</div>
+<div class="row">
+    <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12 p-0 transparent8 bg-orange h-dynamic">
+        <p class="container-title">BIENVENIDOS A CAVA!</p>
     </div>
-    <div class="row h-400">
-        <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 p-0">
-
-        </div>
+    <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12 p-0 bg-blue">
+        <img class="d-block w-100 transparent5" src="~/Content/images/Experience/cava_febrero2021_45.jpg">
+    </div>
+    <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12 p-0 transparent8 bg-orange h-dynamic">
+        <p class="container-title">DISFRUTA DE NUESTRA EXPERIENCIA</p>
+    </div>
+</div>
+<div class="row">
+    <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12 p-0 bg-blue">
+        <img class="d-block w-100 transparent5" src="~/Content/images/Experience/cava_febrero2021_48.jpg">
+    </div>
+    <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12 p-0 transparent8 bg-orange h-dynamic">
+        <p class="container-title">AVENIDA ESCAZU</p>
+    </div>
+    <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12 p-0 bg-blue">
+        <img class="d-block w-100 transparent5" src="~/Content/images/Experience/cava_febrero2021_37.jpg">
     </div>
 </div>
