--- a/cava/Views/Shared/_Layout.cshtml
+++ b/cava/Views/Shared/_Layout.cshtml
@@ -27,50 +27,43 @@
                 <span class="navbar-toggler-icon accordion"></span>
             </button>
 
-            <div class="collapse navbar-collapse" id="navbarColor02">
-                <div class="row col-xl-6 col-lg-10 col-md-12 col-sm-10 pl-0 pr-0">
-                    <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col-6 center-aligned">
-                        <a id="menu-experience-id" href="#" class="nav-link white-label menu">EXPERIENCIAS</a>
-                    </div>
-                    <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col-6">
-                        <a id="menu-bar-id" href="#" class="nav-link white-label menu mr-xl-3 mr-lg-3 mr-md-3 mr-sm-3">MIXOLOGÍA</a>
-                    </div>
-                    <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col-6">
-                        <a id="menu-kitchen-id" href="#" class="nav-link white-label menu mr-xl-3 mr-lg-3 mr-md-3 mr-sm-3 mt-1">GASTRONOMÍA</a>
-                    </div>
-                    <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col-6">
-                        <a id="menu-reservation-id" href="#" class="nav-link white-label menu mr-xl-3 mr-lg-3 mr-md-3 mr-sm-3 mt-1">RESERVAS</a>
-                    </div>
-                </div>
-                <div class="row col-xl-6 col-lg-2 col-md-12 col-sm-2">
-                    <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 mt-md-3 mt-sm-3 mt-3">
-                        <img src="~/Content/images/Icons/icon3.png" class="float-right d-xl-block d-lg-none d-md-block d-sm-none" style="height:50px;width:110px;border-radius:20px;" />
-                        <img src="~/Content/images/Icons/icon3.png" class="d-xl-none d-lg-block d-md-none d-sm-none d-none" style="height:50px;width:110px;border-radius:20px;" />
-                    </div>
-                </div>
+            <div class="collapse navbar-collapse d-flex flex-row-reverse" id="navbarColor02">
+                <ul class="bg-blue">
+                    <li><a id="menu-reservation-id" href="#" class="border-1 nav-link white-label menu mr-xl-3 mr-lg-3 mr-md-3 mr-sm-3 mt-1 border-1">RESERVACIONES</a></li>
+                    <li><a id="menu-experience-id" href="#" class="nav-link white-label menu mr-xl-3 mr-lg-3 mr-md-3 mr-sm-3 mt-1">EXPERIENCIAS</a></li>
+                    <li><a id="menu-kitchen-id" href="#" class="nav-link white-label menu mr-xl-3 mr-lg-3 mr-md-3 mr-sm-3 mt-1">GASTRONOMÍA</a></li>
+                    <li><a id="menu-bar-id" href="#" class="nav-link white-label menu mr-xl-3 mr-lg-3 mr-md-3 mr-sm-3 mt-1">MIXOLOGÍA</a></li>
+                    <li><a id="menu-wine-id" href="#" class="nav-link white-label menu mr-xl-3 mr-lg-3 mr-md-3 mr-sm-3 mt-1">VINOS</a></li>
+                </ul>
+                @*<div class="row col-xl-8 col-lg-10 col-md-12 col-sm-10 pl-0 pr-0 text-right">
+                        <div class="col-xl-4 col-lg-3 col-md-3 col-sm-3 col-6">
+                            <a id="menu-reservation-id" href="#" class="border-1 nav-link white-label menu mr-xl-3 mr-lg-3 mr-md-3 mr-sm-3 mt-1">RESERVACIONES</a>
+                        </div>
+                        <div class="col-xl-2 col-lg-3 col-md-3 col-sm-3 col-6">
+                            <a id="menu-experience-id" href="#" class="nav-link white-label menu">EXPERIENCIAS</a>
+                        </div>
+                        <div class="col-xl-2 col-lg-3 col-md-3 col-sm-3 col-6">
+                            <a id="menu-kitchen-id" href="#" class="nav-link white-label menu mr-xl-3 mr-lg-3 mr-md-3 mr-sm-3 mt-1">GASTRONOMÍA</a>
+                        </div>
+                        <div class="col-xl-2 col-lg-3 col-md-3 col-sm-3 col-6">
+                            <a id="menu-bar-id" href="#" class="nav-link white-label menu mr-xl-3 mr-lg-3 mr-md-3 mr-sm-3">MIXOLOGÍA</a>
+                        </div>
+                        <div class="col-xl-2 col-lg-3 col-md-3 col-sm-3 col-6">
+                            <a id="menu-wines-id" href="#" class="nav-link white-label menu mr-xl-3 mr-lg-3 mr-md-3 mr-sm-3">VINOS</a>
+                        </div>
+                    </div>*@
+                @*<div class="row col-xl-6 col-lg-2 col-md-12 col-sm-2">
+                        <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 mt-md-3 mt-sm-3 mt-3">
+                            <img src="~/Content/images/Icons/icon3.png" class="float-right d-xl-block d-lg-none d-md-block d-sm-none" style="height:50px;width:110px;border-radius:20px;" />
+                            <img src="~/Content/images/Icons/icon3.png" class="d-xl-none d-lg-block d-md-none d-sm-none d-none" style="height:50px;width:110px;border-radius:20px;" />
+                        </div>
+                    </div>*@
             </div>
         </nav>
     </div>
     <div class="body-content content pl-0 pr-0">
         <div class="push"></div>
         @RenderBody()
-    </div>
-    <div class="footer">
-        <iframe src="~/Content/audio/BackgroundAudio.m4a" type="audio/mp3" allow="autoplay" id="audio" style="display:none"></iframe>
-        <audio id="audio-player" controls autoplay>
-            <source src="~/Content/v2.0/audios/BackgroundAudio.m4a" type="audio/mp3">
-        </audio>
-        <div class="row h-150">
-            <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 p-0 bg-orange">
-                <img class="mx-auto d-block" style="width:400px; height:160px" src="~/Content/images/logo-bg-orange.png">
-            </div>
-        </div>
-        <div class="row h-100 footer-bg">
-            <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 p-0 footer-details">
-                <br />
-                <p class="white-label">&copy; @DateTime.Now.Year - CAVARESTOBAR.COM</p>
-            </div>
-        </div>
     </div>
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
@@ -79,5 +72,9 @@
     <script src="~/Scripts/notify.js"></script>
     <link rel="stylesheet" href="~/Content/jquery.datetimepicker.css" />
     <script src="~/Scripts/jquery.datetimepicker.full.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+    <script src="~/Scripts/jquery-mask/src/jquery.mask.js"></script>
+    <script src="~/Scripts/reservation.js"></script>
+    <script src="~/Scripts/jquery.scrollTo.min.js"></script>
 </body>
 </html>
