--- a/cava/Views/Shared/_Layout.cshtml
+++ b/cava/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 </head>
 <body class="bg" style="overflow-x:hidden">
-    <div class="navbar navbar-expand-lg fixed-top bg-blue">
+    <div class="navbar navbar-expand-lg fixed-top bg-blue border-1-orange">
         <nav class="navbar navbar-expand-lg navbar-dark bg-blue">
             <a class="nav-link flex-row cava-title" href="#">
                 <img src="~/Content/v2.0/images/logos/logo1.png" class="logo" />
@@ -27,15 +27,13 @@
                 <span class="navbar-toggler-icon accordion"></span>
             </button>
 
-            <div class="collapse navbar-collapse d-flex flex-row-reverse" id="navbarColor02">
-                <ul class="bg-blue">
-                    <li><a id="menu-reservation-id" href="#" class="border-1 nav-link white-label menu mr-xl-3 mr-lg-3 mr-md-3 mr-sm-3 mt-1 border-1">RESERVACIONES</a></li>
-                    <li><a id="menu-experience-id" href="#" class="nav-link white-label menu mr-xl-3 mr-lg-3 mr-md-3 mr-sm-3 mt-1">EXPERIENCIAS</a></li>
-                    <li><a id="menu-kitchen-id" href="#" class="nav-link white-label menu mr-xl-3 mr-lg-3 mr-md-3 mr-sm-3 mt-1">GASTRONOMÍA</a></li>
-                    <li><a id="menu-bar-id" href="#" class="nav-link white-label menu mr-xl-3 mr-lg-3 mr-md-3 mr-sm-3 mt-1">MIXOLOGÍA</a></li>
-                    <li><a id="menu-wine-id" href="#" class="nav-link white-label menu mr-xl-3 mr-lg-3 mr-md-3 mr-sm-3 mt-1">VINOS</a></li>
+            <div class="collapse navbar-collapse d-xl-flex d-lg-flex flex-xl-row-reverse flex-lg-row-reverse" id="navbarColor02">
+                <ul class="bg-blue pt-3">
+                    <li><a id="menu-reservation-id" href="#" class="border-1 nav-link white-label menu custom-font-size mr-xl-3 mr-lg-3 mr-md-3 mr-sm-3 mt-1 border-1">RESERVACIONES</a></li>
+                    <li><a id="menu-kitchen-id" href="#" class="nav-link white-label menu custom-font-size mr-xl-3 mr-lg-3 mr-md-3 mr-sm-3 mt-1">GASTRONOMÍA</a></li>
+                    <li><a id="menu-experience-id" href="#" class="nav-link white-label menu custom-font-size mr-xl-3 mr-lg-3 mr-md-3 mr-sm-3 mt-1">EXPERIENCIAS</a></li>
                 </ul>
-                @*<div class="row col-xl-8 col-lg-10 col-md-12 col-sm-10 pl-0 pr-0 text-right">
+                @*<div class="row">
                         <div class="col-xl-4 col-lg-3 col-md-3 col-sm-3 col-6">
                             <a id="menu-reservation-id" href="#" class="border-1 nav-link white-label menu mr-xl-3 mr-lg-3 mr-md-3 mr-sm-3 mt-1">RESERVACIONES</a>
                         </div>
