--- a/cava/Views/Home/Experience.cshtml
+++ b/cava/Views/Home/Experience.cshtml
@@ -39,7 +39,7 @@
     <div class="col-xl-2 col-lg-2 col-md-1 col-sm-1 col-1">
 
     </div>
-    <div class="col-xl-8 col-lg-8 col-md-10 col-sm-10 col-10 bg-orange pt-3 radius-top-5">
+    <div class="col-xl-8 col-lg-8 col-md-10 col-sm-10 col-10 bg-orange radius-top-5">
         <label class="white-label font-weight-bold ml-3 mt-4 custom-font-size">¡RESERVA CON NOSOTROS!</label>
         @{
             if (Model != null && !string.IsNullOrEmpty(Model.WhatsappUrl))
@@ -56,7 +56,7 @@
     <div class="col-xl-2 col-lg-2 col-md-1 col-sm-1 col-1">
 
     </div>
-    <div class="col-xl-8 col-lg-8 col-md-10 col-sm-10 col-10 bg-orange pt-3">
+    <div class="col-xl-8 col-lg-8 col-md-10 col-sm-10 col-10 bg-orange">
         <hr class="m-0 bg-blue" />
     </div>
     <div class="col-xl-2 col-lg-2 col-md-1 col-sm-10 col-10">
