--- a/cava/Views/Shared/_Layout.cshtml
+++ b/cava/Views/Shared/_Layout.cshtml
@@ -10,46 +10,41 @@
 
     <link rel="stylesheet" href="~/Content/custom.css">
     <link rel="stylesheet" href="~/Content/bootstrap.css" />
+    <link id="css-sprite-link" rel="stylesheet" href="~/Content/v2.0/images/slides/sprites/xl-40/mysprite.sprite.css" />
 
     <script src="~/Scripts/jquery-3.5.1.js"></script>
     <script src="~/Scripts/custom.js"></script>
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=1">
 </head>
-<body class="bg" style="overflow-x:hidden">
+<body class="bg">
     <div class="navbar navbar-expand-lg fixed-top bg-blue border-1-orange">
-        <nav class="navbar navbar-expand-lg navbar-dark bg-blue">
-            <a class="nav-link flex-row cava-title" href="#">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-blue p-0 align-top">
+            <a class="nav-link flex-row cava-title p-0" href="#">
                 <img src="~/Content/v2.0/images/logos/logo1.png" class="logo" />
                 <span class="sr-only">(current)</span>
             </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler float-right mb-3" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon accordion"></span>
             </button>
 
             <div class="collapse navbar-collapse d-xl-flex d-lg-flex flex-xl-row-reverse flex-lg-row-reverse" id="navbarColor02">
-                <ul class="bg-blue pt-3">
-                    <li><a id="menu-reservation-id" href="#" class="border-1 nav-link white-label menu custom-font-size mr-xl-3 mr-lg-3 mr-md-3 mr-sm-3 mt-1 border-1">RESERVACIONES</a></li>
-                    <li><a id="menu-kitchen-id" href="#" class="nav-link white-label menu custom-font-size mr-xl-3 mr-lg-3 mr-md-3 mr-sm-3 mt-1">GASTRONOMÍA</a></li>
-                    <li><a id="menu-experience-id" href="#" class="nav-link white-label menu custom-font-size mr-xl-3 mr-lg-3 mr-md-3 mr-sm-3 mt-1">EXPERIENCIAS</a></li>
-                </ul>
-                @*<div class="row">
-                        <div class="col-xl-4 col-lg-3 col-md-3 col-sm-3 col-6">
-                            <a id="menu-reservation-id" href="#" class="border-1 nav-link white-label menu mr-xl-3 mr-lg-3 mr-md-3 mr-sm-3 mt-1">RESERVACIONES</a>
-                        </div>
-                        <div class="col-xl-2 col-lg-3 col-md-3 col-sm-3 col-6">
-                            <a id="menu-experience-id" href="#" class="nav-link white-label menu">EXPERIENCIAS</a>
-                        </div>
-                        <div class="col-xl-2 col-lg-3 col-md-3 col-sm-3 col-6">
-                            <a id="menu-kitchen-id" href="#" class="nav-link white-label menu mr-xl-3 mr-lg-3 mr-md-3 mr-sm-3 mt-1">GASTRONOMÍA</a>
-                        </div>
-                        <div class="col-xl-2 col-lg-3 col-md-3 col-sm-3 col-6">
-                            <a id="menu-bar-id" href="#" class="nav-link white-label menu mr-xl-3 mr-lg-3 mr-md-3 mr-sm-3">MIXOLOGÍA</a>
-                        </div>
-                        <div class="col-xl-2 col-lg-3 col-md-3 col-sm-3 col-6">
-                            <a id="menu-wines-id" href="#" class="nav-link white-label menu mr-xl-3 mr-lg-3 mr-md-3 mr-sm-3">VINOS</a>
-                        </div>
-                    </div>*@
+                @*<ul class="bg-blue pt-3">
+                        <li><a id="menu-reservation-id" href="#" class="border-1 nav-link white-label menu custom-font-size mr-xl-3 mr-lg-3 mr-md-3 mr-sm-3 mt-1 border-1">RESERVACIONES</a></li>
+                        <li><a id="menu-kitchen-id" href="#" class="nav-link white-label menu custom-font-size mr-xl-3 mr-lg-3 mr-md-3 mr-sm-3 mt-1">GASTRONOMÍA</a></li>
+                        <li><a id="menu-experience-id" href="#" class="nav-link white-label menu custom-font-size mr-xl-3 mr-lg-3 mr-md-3 mr-sm-3 mt-1">EXPERIENCIAS</a></li>
+                    </ul>*@
+                <div class="row">
+                    <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12">
+                        <a id="menu-reservation-id" href="#" class="btn w-100 border-1 nav-link white-label menu custom-font-size mr-xl-3 mr-lg-3 mr-md-3 mr-sm-3 mr-3">RESERVACIONES</a>
+                    </div>
+                    <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12 d-flex justify-content-center">
+                        <a id="menu-kitchen-id" href="#" class="nav-link white-label menu custom-font-size mr-xl-3 mr-lg-3 mr-md-3 mr-sm-3 mt-1">GASTRONOMÍA</a>
+                    </div>
+                    <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12 d-flex justify-content-center">
+                        <a id="menu-experience-id" href="#" class="nav-link white-label menu custom-font-size mr-xl-3 mr-lg-3 mr-md-3 mr-sm-3 mt-1">EXPERIENCIAS</a>
+                    </div>
+                </div>
                 @*<div class="row col-xl-6 col-lg-2 col-md-12 col-sm-2">
                         <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 mt-md-3 mt-sm-3 mt-3">
                             <img src="~/Content/images/Icons/icon3.png" class="float-right d-xl-block d-lg-none d-md-block d-sm-none" style="height:50px;width:110px;border-radius:20px;" />
@@ -59,18 +54,19 @@
             </div>
         </nav>
     </div>
-    <div class="body-content content pl-0 pr-0">
-        <div class="push"></div>
+    <div class="body-content content h-700 pl-0 pr-0">
+        <div class="push d-none d-sm-block"></div>
         @RenderBody()
     </div>
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
 
+    <script src="https://cdn.jsdelivr.net/npm/lazyload@2.0.0-rc.2/lazyload.js"></script>
     <script src="~/Scripts/notify.js"></script>
     <link rel="stylesheet" href="~/Content/jquery.datetimepicker.css" />
     <script src="~/Scripts/jquery.datetimepicker.full.js"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css" />
     <script src="~/Scripts/jquery-mask/src/jquery.mask.js"></script>
     <script src="~/Scripts/reservation.js"></script>
     <script src="~/Scripts/jquery.scrollTo.min.js"></script>
